adjusted btn padding for mobile devices to prevent overflow

--- a/index.css
+++ b/index.css
@@ -14,7 +14,21 @@ html, body {
 
 body {
   position: relative;
+  overflow: overlay;
   overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #777777;
+  border-radius: 50px 50px 50px 50px;
+  -webkit-border-radius: 50px 50px 50px 50px;
+  -moz-border-radius: 50px 50px 50px 50px;
+  -ms-border-radius: 50px 50px 50px 50px;
+  padding-right: 1px;
 }
 
 .lightMode {
@@ -1031,23 +1045,6 @@ img.blur {
     width: 100%;
     min-width: 242px;
   }
-
-  body {
-    overflow: overlay;
-  }
-
-  body::-webkit-scrollbar {
-    width: 8px;
-  }
-
-  body::-webkit-scrollbar-thumb {
-    background-color: #777777;
-    border-radius: 50px 50px 50px 50px;
-    -webkit-border-radius: 50px 50px 50px 50px;
-    -moz-border-radius: 50px 50px 50px 50px;
-    -ms-border-radius: 50px 50px 50px 50px;
-    padding-right: 1px;
-  }
 }
 @media screen and (max-width: 1400px) {
   .caro-img, .project-description > div {
@@ -1191,19 +1188,6 @@ img.blur {
     opacity: 0;
     transition: all 0.3s linear;
   }
-
-  body::-webkit-scrollbar {
-    width: 8px;
-  }
-
-  body::-webkit-scrollbar-thumb {
-    background-color: #777777;
-    border-radius: 50px 50px 50px 50px;
-    -webkit-border-radius: 50px 50px 50px 50px;
-    -moz-border-radius: 50px 50px 50px 50px;
-    -ms-border-radius: 50px 50px 50px 50px;
-    padding-right: 1px;
-  }
 }
 @media screen and (max-width: 650px) {
   #about > h2 {
@@ -1292,13 +1276,7 @@ img.blur {
     min-width: 0px !important;
   }
 
-  body::-webkit-scrollbar {
-    width: auto;
-  }
-
-  body::-webkit-scrollbar-thumb {
-    background-color: #777777;
-    border-radius: auto;
-    padding-right: 0;
+  .caro-btns {
+    padding: 1rem;
   }
 }/*# sourceMappingURL=index.css.map */
