--- a/src/carousel/_carouselBreakpoints.scss
+++ b/src/carousel/_carouselBreakpoints.scss
@@ -70,4 +70,7 @@
     .project-description>div{
         min-width: 0px !important; 
     }
+    .caro-btns{
+        padding: 1rem;
+    }
 }
